# vanguard-mri-harmonization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/data/: synthetic_validation.yaml
configs/model/: vanguard_base.yaml
docker/: Dockerfile  docker-compose.yml
requirements/: base.txt  development.txt  evaluation.txt  training.txt
src/vanguard/core/: bayesian_layers.py  mathematical_utils.py  uncertainty_quantification.py
